if composing on mobile prevent background scrolling

--- a/modules/composer.less
+++ b/modules/composer.less
@@ -1,5 +1,12 @@
 @topbarHeight: 50px;
 
+
+html.composing {
+	&.mobile {
+		overflow: hidden;
+	}
+}
+
 .composer {
 	.no-select;
 
